changes/3.19/e894beb8183dd9e3834983440900ceb632823676
ASoC: cs42l51: depends on I2C

Fix build errors when CONFIG_I2C is not enabled by making the
driver depend on I2C.

../sound/soc/codecs/cs42l51-i2c.c:55:1: warning: data definition has no type or storage class [enabled by default]
 module_i2c_driver(cs42l51_i2c_driver);
 ^
../sound/soc/codecs/cs42l51-i2c.c:55:1: error: type defaults to 'int' in declaration of 'module_i2c_driver' [-Werror=implicit-int]
../sound/soc/codecs/cs42l51-i2c.c:55:1: warning: parameter names (without types) in function declaration [enabled by default]
../sound/soc/codecs/cs42l51-i2c.c:45:26: warning: 'cs42l51_i2c_driver' defined but not used [-Wunused-variable]
 static struct i2c_driver cs42l51_i2c_driver = {
                          ^

Signed-off-by: Randy Dunlap <rdunlap@infradead.org>
Acked-by: Brian Austin <brian.austin@cirrus.com>
Signed-off-by: Mark Brown <broonie@kernel.org>

